force-app/main/default/objects/Lead__c/Lead__c.object-meta.xml
<CustomObject>
    <label>LV Lead</label>
    <nameField>
        <label>Lead Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LV Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>