force-app/main/default/objects/Lead__c/fields/Assign_Lead__c.field-meta.xml
<CustomField>
    <fullName>Assign_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Assigns the lead to a new user. Triggers workflow that updates owner.</description>
    <inlineHelpText>Assigns the lead to a new user. Triggers workflow that updates owner.</inlineHelpText>
    <label>Assign Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>