force-app/main/default/objects/Lead__c/fields/Call_Script__c.field-meta.xml
<CustomField>
    <fullName>Call_Script__c</fullName>
    <description>This is where the call scripts will be uploaded</description>
    <label>Call Script</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>