force-app/main/default/objects/Lead__c/fields/Created_by_Pardot__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Pardot__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the lead record was created by the Pardot to Salesforce connector. Populated by a Pardot automation rule.</description>
    <inlineHelpText>Indicates whether the lead record was created by the Pardot to Salesforce connector. Populated by a Pardot automation rule.</inlineHelpText>
    <label>Created by Pardot</label>
    <type>Checkbox</type>
</CustomField>