force-app/main/default/objects/Lead__c/fields/Current_Account_State__c.field-meta.xml
<CustomField>
    <fullName>Current_Account_State__c</fullName>
    <formula>TAN__r.Billing_State_Backend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Account State</label>
    <type>Text</type>
</CustomField>