force-app/main/default/objects/Lead__c/fields/Email_Parse__c.field-meta.xml
<CustomField>
    <fullName>Email_Parse__c</fullName>
    <formula>IF( Email__c &lt;&gt;NULL,SUBSTITUTE(Email__c , LEFT(Email__c , FIND(&quot;@&quot;, Email__c )), NULL),NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Parse</label>
    <type>Text</type>
</CustomField>