force-app/main/default/objects/Lead__c/fields/Include_in_email_marketing_campaign__c.field-meta.xml
<CustomField>
    <fullName>Include_in_email_marketing_campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should we include this lead in email marketing campaigns?</description>
    <label>Include in pre-event email marketing?</label>
    <type>Checkbox</type>
</CustomField>