force-app/main/default/objects/Lead__c/fields/Include_in_post_event_email_marketing__c.field-meta.xml
<CustomField>
    <fullName>Include_in_post_event_email_marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in post-event email marketing?</label>
    <type>Checkbox</type>
</CustomField>