force-app/main/default/objects/Lead__c/fields/isdc_closescore__c.field-meta.xml
<CustomField>
    <fullName>isdc_closescore__c</fullName>
    <description>A number between 1 and 100, ranking the quality of the account record in relation to all other records in the SFDC org, predicting which record is most likely to close.</description>
    <label>Playbooks Lead Close Score</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>