force-app/main/default/objects/Lead__c/fields/Last_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Status_Date__c</fullName>
    <label>Last Status Date</label>
    <type>DateTime</type>
</CustomField>