force-app/main/default/objects/Lead__c/fields/Lead_Gen_Rep__c.field-meta.xml
<CustomField>
    <fullName>Lead_Gen_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Select name of Lead Gen Rep who worked the Lead</description>
    <inlineHelpText>Select name of Lead Gen Rep who worked the Lead</inlineHelpText>
    <label>Lead Gen Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Lead_Gen_Rep1</relationshipName>
    <type>Lookup</type>
</CustomField>