force-app/main/default/objects/Lead__c/fields/Lead_Source_Detail_Other__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Detail_Other__c</fullName>
    <description>Additional details to Lead Source field</description>
    <inlineHelpText>Additional details to Lead Source field</inlineHelpText>
    <label>Lead Source Detail - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>