force-app/main/default/objects/Lead__c/fields/Microsoft_Involved__c.field-meta.xml
<CustomField>
    <fullName>Microsoft_Involved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Microsoft Involved</label>
    <type>Checkbox</type>
</CustomField>