force-app/main/default/objects/Lead__c/fields/MQL__c.field-meta.xml
<CustomField>
    <fullName>MQL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Lead is a Marketing Qualified Lead by acquiring 75+ points through various interactions with Livongo’s marketing efforts.</description>
    <inlineHelpText>Lead is a Marketing Qualified Lead by acquiring 75+ points through various interactions with Livongo’s marketing efforts.</inlineHelpText>
    <label>MQL</label>
    <type>Checkbox</type>
</CustomField>