force-app/main/default/objects/Lead__c/fields/MQL_Date__c.field-meta.xml
<CustomField>
    <fullName>MQL_Date__c</fullName>
    <description>Date the Lead became qualified.</description>
    <inlineHelpText>Date the Lead became qualified.</inlineHelpText>
    <label>MQL Date</label>
    <type>Date</type>
</CustomField>