force-app/main/default/objects/Lead__c/fields/No_Acct_Found_Via_Email_Parse_Flow__c.field-meta.xml
<CustomField>
    <fullName>No_Acct_Found_Via_Email_Parse_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flow populates this checkbox when a Lead is created with an email address, but does not have an account and the results of a lookup yield no results.</description>
    <inlineHelpText>Flow populates this checkbox when a Lead is created with an email address, but does not have an account and the results of a lookup yield no results.</inlineHelpText>
    <label>No Acct Found Via Email Parse Flow</label>
    <type>Checkbox</type>
</CustomField>