force-app/main/default/objects/Lead__c/fields/of_US_based_Covered_Lives__c.field-meta.xml
<CustomField>
    <fullName>of_US_based_Covered_Lives__c</fullName>
    <label># of US-based Covered Lives</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>