force-app/main/default/objects/Lead__c/fields/Offers_Benefits_US_Employes__c.field-meta.xml
<CustomField>
    <fullName>Offers_Benefits_US_Employes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offers Benefits US Employes</label>
    <type>Checkbox</type>
</CustomField>