force-app/main/default/objects/Lead__c/fields/Playbooks_Play_Name__c.field-meta.xml
<CustomField>
    <fullName>Playbooks_Play_Name__c</fullName>
    <label>Playbooks Play Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>