force-app/main/default/objects/Lead__c/fields/Playbooks_Play_Status__c.field-meta.xml
<CustomField>
    <fullName>Playbooks_Play_Status__c</fullName>
    <label>Playbooks Play Status</label>
    <length>200</length>
    <type>Text</type>
</CustomField>