force-app/main/default/objects/Lead__c/fields/Playbooks_Step_Number__c.field-meta.xml
<CustomField>
    <fullName>Playbooks_Step_Number__c</fullName>
    <label>Playbooks Step Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>