force-app/main/default/objects/Lead__c/fields/Priority_Event_Lead__c.field-meta.xml
<CustomField>
    <fullName>Priority_Event_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if this is a white-glove lead (may include pre-show gift, etc)</inlineHelpText>
    <label>Priority Event Lead</label>
    <type>Checkbox</type>
</CustomField>