force-app/main/default/objects/Lead__c/fields/Ready_to_convert__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_convert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready to convert</label>
    <type>Checkbox</type>
</CustomField>