force-app/main/default/objects/Lead__c/fields/Reason_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Reason_Rejected__c</fullName>
    <label>Reason Rejected</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Already has an opportunity/duplicate</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Inaccurate Data/Junk</fullName>
            </value>
            <value>
                <fullName>Incorrectly Assigned/Wrong Rep</fullName>
            </value>
            <value>
                <fullName>Job Title Not Relevant</fullName>
            </value>
            <value>
                <fullName>No budget</fullName>
            </value>
            <value>
                <fullName>No interest/need</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Student/Retired</fullName>
            </value>
            <value>
                <fullName>Unable to Reach</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>