force-app/main/default/objects/Lead__c/fields/Reason_Why_Convert__c.field-meta.xml
<CustomField>
    <fullName>Reason_Why_Convert__c</fullName>
    <label>Reason Why Convert</label>
    <length>100</length>
    <type>Text</type>
</CustomField>