force-app/main/default/objects/Lead__c/fields/Route_to__c.field-meta.xml
<CustomField>
    <fullName>Route_to__c</fullName>
    <label>Route to</label>
    <length>240</length>
    <type>Text</type>
</CustomField>