force-app/main/default/objects/Lead__c/fields/Sent_to_Product_Awareness__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Product_Awareness__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a workflow sent an email regarding the lead record to the product awareness team.</description>
    <inlineHelpText>Indicates whether a workflow sent an email regarding the lead record to the product awareness team.</inlineHelpText>
    <label>Sent to Product Awareness</label>
    <type>Checkbox</type>
</CustomField>