force-app/main/default/objects/Lead__c/fields/Sent_to_Product_Awareness_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Product_Awareness_Timestamp__c</fullName>
    <description>Indicates the date and time in which a workflow fired to send the lead to the product awareness team. Populated by process builder automation.</description>
    <inlineHelpText>Indicates the date and time in which a workflow fired to send the lead to the product awareness team.</inlineHelpText>
    <label>Sent to Product Awareness Timestamp</label>
    <type>DateTime</type>
</CustomField>