force-app/main/default/objects/Lead__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jason Macaleer</fullName>
            </value>
            <value>
                <fullName>Neal Lewis</fullName>
            </value>
            <value>
                <fullName>Mike Reeve</fullName>
            </value>
            <value>
                <fullName>Aaryn Pure</fullName>
            </value>
            <value>
                <fullName>Randy Forman</fullName>
            </value>
            <value>
                <fullName>Bill Kutsche</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>