force-app/main/default/objects/Lead__c/fields/Why_not_convert__c.field-meta.xml
<CustomField>
    <fullName>Why_not_convert__c</fullName>
    <inlineHelpText>Reason why not converting this lead or &quot;lead is dead&quot;</inlineHelpText>
    <label>Why not convert</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Just purchased competitor</fullName>
            </value>
            <value>
                <fullName>Wrong contact</fullName>
            </value>
            <value>
                <fullName>Asked to be removed</fullName>
            </value>
            <value>
                <fullName>Fictitious information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>