force-app/main/default/objects/Lead__c/listViews/Email_Opt_Outs.listView-meta.xml
<ListView>
    <fullName>Email_Opt_Outs</fullName>
    <columns>NAME</columns>
    <columns>EMAIL__c</columns>
    <columns>COMPANY__c</columns>
    <columns>STATUS__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>HasOptedOutOfEmail__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>HasOptedOutOfEmail__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Email_Opt_Outs</label>
</ListView>