force-app/main/default/objects/Lead__c/listViews/Fast_Lane_Lead_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Fast_Lane_Lead_Queue_Lead</fullName>
    <columns>NAME</columns>
    <columns>COMPANY__c</columns>
    <columns>EMAIL__c</columns>
    <columns>STATUS__c</columns>
    <columns>Route_to__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Fast Lane Lead Queue</label>
</ListView>