force-app/main/default/objects/Lead__c/listViews/My_Leads_Created_Last_30_Days.listView-meta.xml
<ListView>
    <fullName>My_Leads_Created_Last_30_Days</fullName>
    <columns>NAME</columns>
    <columns>EMAIL__c</columns>
    <columns>TITLE__c</columns>
    <columns>COMPANY__c</columns>
    <columns>STATUS__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>My Leads - Created Last 30 Days</label>
</ListView>